Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.5.0 - Current
  Matt Brookings
  - Fixed a bug in client functions that tried to evaluate a NULL string
  - Fixed several bugs in vusaged relating to duplicate items in the work queue
  - Added entirely new code for saving and loading snapshot of current items in vusaged memory
  - Added preferred make binary selection to configure script
  - Renamed queue_t to wqueue_t for Solaris
  - Renamed local domain socket variable (again)
  - Added default LLONG_MAX definition
  - Updated strtoll error checking to check for LLONG_MAX instead of LONG_MAX
  - Made yet more modifications in storage.h for htonll and ntohll compatibility
  - Fixed vchkpw calling strstr with NULL value
  - Fixed some slight output issues and test issues in configure.ac
  - Fixed a small build bug with cdb
  - Updated vusaged subdirectory to use main source tree's copy of storage.h
  - Fixed a number of issues with FreeBSD detection of endian and handling of 64bit values
  - Fixed some pthreads detection issues on FreeBSD
  - Renamed variable that is pre-defined in Solaris
  - Fixed quota/limits comparison
  - Updated build scripts considerably
  - Updated to build vusaged
  - Fixed some format string bugs
  - Updated config code to use VPOPMAILDIR rather than getpwnam(vpopmail)
  - New quota functions added in quota.c
  - Updated vdominfo and vuserinfo to show more detailed quota statistics and to use new quota API
  - Updated vdelivermail to use new quota API
  - Added warnings in functions that utilize old quota code to help identify changes that need to be made
  - Added new more efficient, safer alternatives to current vpopmail API to be fully replaced later
  - Updated vdeloldusers to allow option to ignore users with .qmail file
  - Updated to build and install libvpopmail.so
  - Added backend module support
  - Updated CDB module